2002-07-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (addkbsubinstoarray):
	disabled experimental pointer warping code

	* fvwm/menus.c:
	removed menu crash debug code

2002-07-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c:
	added tons of crash debug code

	* fvwm/add_window.c:
	made a lot of internal functions static

	* fvwm/add_window.c (setup_button_windows):
	(destroy_title_window):
	(destroy_button_windows):
	(destroy_resize_handle_windows):
	(destroy_auxiliary_windows):
	(destroy_icon):
	(destroy_window):
	* fvwm/icons.c (CreateIconWindow):
	safety patches w/ XDeleteContext

	* fvwm/menus.c (DestroyMenu):
	fixed a crash w/ accessing already deleted menus

2002-07-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (get_menu_options):
	fixed menu context rectangle "icon" if the icon was not just a pixmap

2002-07-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapNotify):
	(HandleMapRequestKeepRaised):
	(HandleUnmapNotify):
	* fvwm/ewmh_events.c (ewmh_WMStateModal):
	* fvwm/ewmh.c (ewmh_HandleDesktop):
	* fvwm/style.c (parse_and_set_window_style):
	removed old do_grab_focus_when_created and *_when_transient_* flags

2002-07-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (MatchesConditionMask):
	* fvwm/focus.c (DoSetFocus):
	* fvwm/session.c (MatchWinToSM):
	* fvwm/module_interface.c (SETOLDFLAGS):
	removed old is_lenient flag

	* fvwm/bindings.c:
	* fvwm/style.c (__simplify_style_list):
	(simplify_style_list):
	reformatted

	* fvwm/window_flags.h:
	* fvwm/style.h:
	access macros for focus policy flags structures
	reformatted

	* fvwm/focus_policy.c:
	* fvwm/focus_policy.h:
	new files

2002-07-22  Bob Woodside  <dumbledore@woodsway.com>

	* fvwm/placement.c (PlaceWindow):
	Fixed interaction between CascadePlacement and StartsOnPage

2002-07-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/fvwmsignal.c (fvwmSelect):
	call alloca(0) in fvwmSelect to make sure the memory is not leaked in
	modules
