@@ -1,3 +1,10 @@
+2002-07-30  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/conditional.c (CMD_Direction):
+	use PeekToken instead of GetNextToken
+	cleaned up
+	new direction "center"
+
 2002-07-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (addkbsubinstoarray):
